--- a/ItalishPizza/res/layout/activity_login.xml
+++ b/ItalishPizza/res/layout/activity_login.xml
@@ -13,9 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:columnCount="3"
+        android:columnCount="6"
         android:orientation="horizontal" 
+        android:padding="8dp"
         
         />
 
+
+    
+    
 </RelativeLayout>
