--- a/ItalishPizza/res/layout/fragment_add_user.xml
+++ b/ItalishPizza/res/layout/fragment_add_user.xml
@@ -2,13 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="regimeister.italishpizza.AddUser$PlaceholderFragment" 
-    android:orientation="vertical"
-    >
+    tools:context="regimeister.italishpizza.AddUser$PlaceholderFragment" >
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -32,29 +31,28 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Password" />
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/editText13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10" />
     </LinearLayout>
-    
-     <LinearLayout
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
-    <Spinner
-        android:id="@+id/spinner1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:entries="@array/authority_arrays"
-         />
-     </LinearLayout>
-    
+
+        <Spinner
+            android:id="@+id/spinner1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/authority_arrays" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -65,5 +63,9 @@
             android:layout_height="wrap_content"
             android:text="Add User" />
     </LinearLayout>
+    
+    
+
+
 
 </LinearLayout>
